JSAI/error/src/test/resources/base/k011.js
function foo(param) {
    arguments = 7;
    return arguments + param;
}
print(foo(3));
